--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.techforumist.addressbook</groupId>
-	<artifactId>addressbook</artifactId>
+	<groupId>com.springboot.songlibrary</groupId>
+	<artifactId>songlib</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>address-book-spring-boot-security-angularjs</name>
+	<name>songlibrary-spring-boot-security-angularjs</name>
 	<description>Simple demo with angular js and spring security </description>
 
 	<parent>
